--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -1,24 +1,25 @@
 .header {
-  height: 7vh;
-  background: linear-gradient(135deg, #262858, #403C88);
+  height: 85px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 24px;
+  padding: 0 120px;
+	background-color: $color-card;
   color: #F0F0FF;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   &__logo {
     font-weight: bold;
+		font-size: 1.5rem;
+		cursor: pointer;
   }
 
   &__icon {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     cursor: pointer;
     transition: transform 0.2s ease;
 
     &:hover {
-      transform: scale(1.1);
+      transform: translateX(3px);
     }
   }
 }
