--- a/frontend/src/styles/lib/_variables.scss
+++ b/frontend/src/styles/lib/_variables.scss
@@ -1,6 +1,8 @@
 $color-bg: #1a1c3e;
 $color-card: #262858;
 $color-button: #4e46b3;
+$color-button-dark: #373282;
+
 
 $color-text: #f0f0ff;
 $color-text-muted: #B0B0FF;
