--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -1,2 +1,8 @@
 @import './lib/normalize';
 @import './components/all';
+@import './lib/variables';
+
+.wrapper {
+	min-height: 100vh;
+  background-color: $color-bg;
+}
