--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -7,6 +7,10 @@
 	background-color: $color-card;
   color: #F0F0FF;
 
+  @media (max-width: 768px) {
+    padding: 0 20px;
+  }
+
 	&__logo {
 		display: flex;
 		align-items: center;
