--- a/frontend/src/styles/components/_documents.scss
+++ b/frontend/src/styles/components/_documents.scss
@@ -78,6 +78,7 @@
 }
 
 .document-card {
+	cursor: pointer;
   background: variables.$color-card;
   border-radius: 8px;
   padding: 1.5rem;
@@ -179,5 +180,5 @@
 }
 
 .document-card.in-progress {
-  border-left: 3px solid #3f83f8;
+  border-left: 3px solid #c1e700fe;
 }
