--- a/frontend/src/styles/lib/_variables.scss
+++ b/frontend/src/styles/lib/_variables.scss
@@ -3,9 +3,8 @@ $color-card: #262858;
 $color-button: #4e46b3;
 $color-button-dark: #373282;
 
-
 $color-text: #f0f0ff;
-$color-text-muted: #B0B0FF;
+$color-text-muted: #b0b0ff;
 
 $color-input: #1a1c3e;
 $color-input-border: #3a3c6e;
