--- a/frontend/src/styles/lib/_variables.scss
+++ b/frontend/src/styles/lib/_variables.scss
@@ -1,7 +1,7 @@
 $color-bg: #1a1c3e;
 $color-card: #262858;
-$color-button: #4e46b3;
-$color-button-dark: #373282;
+$color-button: #000000;
+$color-button-dark: #2a2565;
 
 $color-text: #f0f0ff;
 $color-text-muted: #b0b0ff;
