--- a/frontend/src/styles/components/_documents.scss
+++ b/frontend/src/styles/components/_documents.scss
@@ -50,13 +50,13 @@
 			transition: all 0.2s;
 
 			&:hover {
-				background: rgba(variables.$color-button, 0.1);
+				background: rgba(variables.$color-button-dark, 0.1);
 				color: variables.$color-text;
 			}
 
 			&.active {
 				color: variables.$color-text;
-				background: rgba(variables.$color-button, 0.2);
+				background: rgba(variables.$color-button-dark, 0.2);
 				position: relative;
 
 				&::after {
@@ -66,7 +66,7 @@
 					left: 0;
 					width: 100%;
 					height: 2px;
-					background: variables.$color-button;
+					background: variables.$color-button-dark;
 				}
 			}
 		}
@@ -87,7 +87,7 @@
 		height: fit-content;
 
 		&:hover {
-			background: variables.$color-button;
+			background: variables.$color-button-dark;
 		}
 
 		.icon {
@@ -178,7 +178,7 @@
 				align-items: center;
 				gap: 0.5rem;
 				padding: 0.5rem 1rem;
-				background: variables.$color-button;
+				background: variables.$color-button-dark;
 				color: variables.$color-text;
 				border-radius: 4px;
 				text-decoration: none;
