--- a/frontend/src/styles/components/_login.scss
+++ b/frontend/src/styles/components/_login.scss
@@ -93,7 +93,7 @@
 
 .submit-btn {
   width: 100%;
-  background-color: $color-button;
+  background-color: $color-button-dark;
   color: white;
   border: none;
   padding: 16px;
